# google-gmail-exporter-v1

./: .gitignore  README.md  config.default.json  config.json  main.py  pyproject.toml
.claude/: settings.local.json
tests/: test_main.py
