[project]
name = "google-gmail-exporter-v1"
version = "0.1.0"
description = "Fetch emails from Gmail by sender and save them locally as JSON and HTML"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
